<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dinner Planner</string>
    <string name="hello_world">Hello frida!</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="choose">Choose</string>
    <string name="initial_cost">0kr</string>
    <string name="item_image">Menu item image</string>
    <string name="welcome_text">Welcome to the Dinner Planner!\n\nHere you will be able to easily plan your dinner.\n\nOnThe next page start by selecting the number of participants. Then select your courses.\n\nWatch Magic Happen!</string>
    <string name="participants">Participants</string>
    <string name="choose_menu">Choose Menu Items</string>
    <string name="tot_cost">Total Cost:</string>
    <string name="starter">Starter</string>
    <string name="main_course">Main Course</string>
    <string name="dessert">Dessert</string>
    <string name="create">Create</string>
    <string name="inst">Instructions</string>
    <string name="ingredients">Ingredients</string>

</resources>
