<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content">


        <TextView
            android:text="@string/participants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/participants"
            android:layout_marginLeft="@dimen/activity_horizontal_margin" />

        <TextView
            android:text="@string/tot_cost"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

        <TextView
            android:text=""
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cost"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
    </LinearLayout>

    <TextView
        android:text="@string/choose_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_gravity="center" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#333"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:text="@string/starter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/starters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/main_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/main_courses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/dessert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/desserts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>

