<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:orientation="horizontal" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right">

    <TextView
        android:text="@string/tot_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:text="@string/initial_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/total_cost" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:layout_gravity="bottom">
            <include layout="@layout/menu_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/overview_item"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".8"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/inst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_gravity="center" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#333"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />

    <include layout="@layout/ingredients_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
</ScrollView>